[tool.poetry]
name = "deploy_ml"
version = "0.1.0"
description = ""
authors = ["Claudio Collao <clcollao@alumnos.uai.cl>"]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"
scipy = "^1.10.0"
scikit-learn = "^1.2.0"
feature-engine = "^1.5.2"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
